--- a/src/Nutcache.WebUI/Shared/MainLayout.razor
+++ b/src/Nutcache.WebUI/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>Nutcache.WebUI</PageTitle>
+<PageTitle>Nutcache</PageTitle>
 
 <div class="page">
     <div class="sidebar">
@@ -9,7 +9,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="/" target="_blank">Mateus Andre</a>
         </div>
 
         <article class="content px-4">
