feature: Add docker-compose support

--- a/src/Nutcache.WebUI/Shared/MainLayout.razor
+++ b/src/Nutcache.WebUI/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="/" target="_blank">Mateus Andre</a>
+            <a href="https://github.com/mateusandre/nutcache-challange-MateusFerreira" target="_blank">Mateus Andre</a>
         </div>
 
         <article class="content px-4">
