--- a/src/Nutcache.WebUI/Pages/Employees.razor
+++ b/src/Nutcache.WebUI/Pages/Employees.razor
@@ -78,7 +78,7 @@ else
                     <p></p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-danger" @onclick="() => DeleteEmployee()">Yes, delete</button>
                 </div>
             </div>
